--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Results-summary-component</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- JavaScript -->
+    <script src="main.js" defer></script>
+  </head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
+  <body>
+    <article class="card">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+      <!-- BLOQUE 1 -->
+      <section class="card__block-1">
+        <h2 class="card__block-1__title">Your Result</h2>
+        <div class="card__circle">
+          <span>76</span>
+          <span>of 100</span>
+        </div>
+        <h3>Great</h3>
+        <h4>You scored higher than 65% of the people who have taken these tests.</h4>
+      </section>
 
-  Your Result
-  76
-  of 100
+      <!-- BLOQUE 2 -->
+      <section class="card__block-2">
+        <h4>Summary</h4>
+        <div id="cardContainer">
+          <!-- <article class="card__block-2__item">
+            <div>
+              <div class="card__block-2__mask">
+                <img src="./assets/images/icon-verbal.svg" alt="">
+              </div>
+              <h4 class="card__block-2__item__title">Reaction</h4>
+            </div>
+            <h5><span class="card__block-2__item__number">80</span>/100</h5>
+          </article> -->
+        </div>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <button>Continue</button>
+      </section>
+    <article/>
+  </body>
 </html>
