--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Jaen Figueroa">
+    <meta name="keywords" content="Frontend Mentor,html, css, javascript">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Results-summary-component</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <!-- JavaScript -->
-    <script src="main.js" defer></script>
+    <script src="./javascript/main.js" defer></script>
   </head>
 
   <body>
